syntax = "proto3";

option go_package = "pkg/generated/distributedtx";

service DistributedTxService {
  rpc Commit(TxToCommit) returns(TxResponse);
  rpc Rollback(TxToRollback) returns(TxResponse);
}

message TxToCommit {
  string tx_id = 1;
}

message TxResponse {}

message TxToRollback {
  string tx_id = 1;
}
